Fix spacing and other

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ a {
   border-bottom: 3px solid #8e4a32;
   border-top: 3px solid #8e4a32;
   background-image: url("../images/border-top.svg"), url("../images/border-bottom.svg"), url("../images/bg.svg");
-  background-size: 2px 5px, 2px 5px 18px auto;
+  background-size: 2px 5px,2px 5px 18px auto;
   background-repeat: repeat-x, repeat-x; repeat;
   background-position: left top, left bottom, left top;
 }
@@ -24,7 +24,7 @@ a {
   border-color: #84452f;
   background-image: url("../images/spy-glass.svg");
   background-repeat: no-repeat;
-  background-position: .2em auto;
+  background-position: 0.2em auto;
   background-size: 1.2em auto;
   padding-left: 1.5em;
 }
